--- a/data/popover/style.css
+++ b/data/popover/style.css
@@ -2,6 +2,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .hide {
@@ -9,29 +11,68 @@
 }
 
 body {
-  font-family: sans-serif;
-/*  background: #2b2e31;
-*/
+  color: #333;
+  font-family: "FiraSans","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+header {
+  background: #fff;
+  margin: 1rem;
+  display: flex;
+  margin: 0 0 1rem 0;
+  padding: 0.85rem;
+  border-bottom: 1px solid #B4B4B4;
+  align-items: center;
+}
+
+header * {
+  flex: auto;
+}
+
+header img {
+  min-height: 64px;
+}
+
+header h1 {
+  font-weight: normal;
+}
+
+main {
+  margin: 1rem;
+}
+
+.panel-text {
+  margin-top: -23px;
+  font-size: 14px;
+  padding: 0.5rem;
+}
+
+.meter {
+  display: flex;
+  background: #3B3B3B;
+  color: rgb(249, 249, 249);
+}
+.meter div {
+  flex: 1;
+  font-size: 0.9rem;
+  padding: 4px;
+  line-height: 1;
+  text-align: center;
 }
 
 .slider {
-  width: 200px;
-  margin: 100px auto;
+  cursor: pointer;
+  position: relative;
+  top: -23px;
 }
 
 input[type="range"] {
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   width: 100%;
   height: 20px;
   margin: 0;
   border: none;
-  padding: 1px 2px;
-  border-radius: 14px;
-  background: #232528;
-  box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
-  -webkit-box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
-  outline: none; /* no focus outline */
+  padding: 0;
+  outline: none;
 }
 
 input[type="range"]::-moz-range-track {
@@ -39,45 +80,11 @@ input[type="range"]::-moz-range-track {
   background: transparent;
 }
 
-input[type="range"]::-ms-track {
-  border: inherit;
-  color: transparent; /* don't drawn vertical reference line */
-  background: transparent;
-}
-
-input[type="range"]::-ms-fill-lower,
-input[type="range"]::-ms-fill-upper {
-  background: transparent;
-}
-
-input[type="range"]::-ms-tooltip {
-  display: none;
-}
-
-/* thumb */
-
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 40px;
-  height: 18px;
-  border: none;
-  border-radius: 12px;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #529de1), color-stop(100%, #245e8f)); /* android <= 2.2 */
-  background-image: -webkit-linear-gradient(top , #529de1 0, #245e8f 100%); /* older mobile safari and android > 2.2 */;
-  background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%); /* W3C */
-}
 input[type="range"]::-moz-range-thumb {
-  width: 40px;
-  height: 18px;
-  border: none;
-  border-radius: 12px;
-  background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%); /* W3C */
-}
-
-input[type="range"]::-ms-thumb {
-  width: 40px;
-  height: 18px;
-  border-radius: 12px;
-  border: 0;
-  background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%); /* W3C */
+width: 33%;
+height: 18px;
+background: rgba(48, 233, 63, 0.53);
+border-radius: 0;
+border: 4px solid #7af390;
+  outline: none;
 }
