--- a/data/popover/style.css
+++ b/data/popover/style.css
@@ -80,11 +80,15 @@ input[type="range"]::-moz-range-track {
   background: transparent;
 }
 
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
+
 input[type="range"]::-moz-range-thumb {
-width: 33%;
-height: 18px;
-background: rgba(48, 233, 63, 0.53);
-border-radius: 0;
-border: 4px solid #7af390;
+  width: 33%;
+  height: 18px;
+  background: rgba(48, 233, 63, 0.53);
+  border-radius: 0;
+  border: 4px solid #7af390;
   outline: none;
 }
